--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@upstash/redis": "^1.31.3",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.11",
+    "@worldcoin/idkit": "^1.2.2",
+    "@worldcoin/idkit-core": "^1.2.2",
     "ai": "^3.1.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
